--- a/style.css
+++ b/style.css
@@ -1,32 +1,78 @@
 * {
-  /* border: solid red 1px; */
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
 }
-
 .container {
-  width: 100%;
-  border: solid red 1px;
+  width: 100vw;
+  background-color: navy;
 }
 
 .navigation {
   display: flex;
-  justify-content: space-evenly;
+  width: 100%;
+  background-color: black;
+  color: white;
+  height: 5vh;
+  font-size: 3vh;
 }
-
+.navigation__links {
+  display: flex;
+  width: 20%; /*FIXME:*/
+  justify-content: space-evenly;
+  align-items: center;
+}
 .navigation__link {
   display: flex;
 }
+.content-container {
+  display: flex;
+  margin: 1.5rem 5rem 1.5rem 5rem;
+}
+.shop {
+  background-color: rgb(241, 237, 237);
+  display: flex;
+  width: 80%;
+  flex-direction: column;
+  box-shadow: 0px 0px 10px 5px black;
+}
+
+.shop__heading {
+  margin: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.shop__title {
+}
+
+.shop__breadcrumbs {
+}
+
+.shop__filter {
+  display: flex;
+  margin: 2rem;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.shop__filter__text {
+}
+
+.shop__filter__sort {
+}
 
 .shop__grid {
-  /* border: solid red 1px; */
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
 
 .product {
-  border: solid red 1px;
-  margin-top: 1%;
-  margin-bottom: 1%;
+  border: solid navy 1px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   width: 20rem;
   display: flex;
   flex-direction: column;
@@ -34,10 +80,11 @@
   justify-content: center;
   align-content: center;
   align-items: center;
+  box-shadow: 5px 5px 5px grey;
 }
 
 .product__image {
-  width: 80%;
+  width: 100%;
 }
 
 .product__info {
@@ -47,5 +94,22 @@
 }
 
 .product__add {
-  /* width: 100%; */
+  padding: 1rem;
+  margin: 1rem;
+  width: 50%;
+  border: none;
+  background: navy;
+  color: white;
+  box-shadow: 2px 2px 5px grey;
+}
+
+.sidebar {
+  margin-left: 1.5rem;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+}
+.sidebar > div {
+  background-color: rgb(241, 237, 237);
+  margin-bottom: 1.5rem;
 }
