--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,60 +1,5 @@
+@import "default.css";
 @import "main/shop/shop.css";
 @import "main/sidebar/sidebar.css";
 @import "animations.css";
 @import "responsiveness.css";
-
-html {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "Roboto", sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: navy;
-}
-
-.container {
-  width: 100vw;
-}
-
-.header {
-  position: sticky;
-  top: 0px;
-  z-index: 1;
-}
-
-.navigation {
-  display: flex;
-  width: 100%;
-  background-color: black;
-  color: white;
-  height: 10vh;
-  font-size: 200%;
-}
-
-.navigation__links {
-  display: flex;
-  width: 100%; /*FIXME:*/
-  justify-content: space-around;
-  align-items: center;
-  font-weight: bold;
-}
-
-.navigation__link {
-  display: flex;
-}
-
-.main {
-  display: flex;
-  margin: 1.5rem 5rem 1.5rem 5rem;
-}
-
-.footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: black;
-  height: 10vh;
-  color: white;
-}
