--- a/stylesheets/responsiveness.css
+++ b/stylesheets/responsiveness.css
@@ -1,10 +1,10 @@
 @media screen and (max-width: 1150px) {
-  .main {
+  .main-wrapper {
     flex-direction: column;
     margin: 1.5rem 1.5rem 1.5rem 1.5rem;
   }
 
-  .shop {
+  .main {
     width: 100%;
   }
 
