--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -38,6 +38,11 @@ body {
 
 .navigation__link {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.navigation__link-icon--cart {
 }
 
 .main-wrapper {
