Fixed new-item button added

--- a/stylesheets/main/shop/shop.css
+++ b/stylesheets/main/shop/shop.css
@@ -42,3 +42,24 @@
   flex-wrap: wrap;
   margin: 1.5rem;
 }
+
+.shop__icon {
+}
+
+#newItemButton {
+  height: 60px;
+  width: 60px;
+  position: fixed;
+  right: 5%;
+  bottom: 3%;
+  color: navy;
+  background-color: transparent;
+  background-image: url("../../../assets/Add/48_Add.svg");
+  background-repeat: no-repeat;
+  /* background-size: cover; */
+  background-position: center;
+  background-color: rgb(241, 237, 237);
+  border-radius: 40%;
+  border: none;
+  box-shadow: 0px 0px 5px 5px rgb(241, 237, 237);
+}
