--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -24,7 +24,7 @@ body {
   width: 100%;
   background-color: black;
   color: white;
-  height: 10vh;
+  height: 15vh;
   font-size: 200%;
 }
 
@@ -56,6 +56,7 @@ body {
 
 .footer {
   display: flex;
+  bottom: 0;
   justify-content: center;
   align-items: center;
   background-color: black;
