--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -24,7 +24,7 @@ body {
   width: 100%;
   background-color: black;
   color: white;
-  height: 15vh;
+  height: 10vh;
   font-size: 200%;
 }
 
@@ -38,8 +38,12 @@ body {
 
 .navigation__link {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  text-decoration: none;
+}
+
+.navigation__link:visited {
+  color: white;
 }
 
 .navigation__link-icon--cart {
