--- a/stylesheets/main/shop/product/product.css
+++ b/stylesheets/main/shop/product/product.css
@@ -23,6 +23,7 @@
   flex-direction: column;
   align-items: center;
   width: 80%;
+  font-weight: bold;
 }
 
 .product__info-name {
@@ -58,6 +59,7 @@
   transition: width 0.5s;
   transition-timing-function: ease;
   box-shadow: 0px 0px 10px 5px navy;
+  font-weight: bold;
 }
 
 .product.sale::after {
@@ -65,6 +67,7 @@
   top: 5%;
   right: 3%;
   padding: 0.5rem 1.5rem 0.5rem 1.5rem;
+  font-weight: bold;
 
   /* background: rgb(0, 0, 36); */
   background: linear-gradient(
