Posting products with user input data, Images added

--- a/stylesheets/main/shop/product/product.css
+++ b/stylesheets/main/shop/product/product.css
@@ -12,6 +12,7 @@
   position: relative;
   transition: box-shadow 0.3s;
   transition-timing-function: ease;
+  padding: 0.5rem;
 }
 
 .product__image {
