--- a/components/Product/product.css
+++ b/components/Product/product.css
@@ -14,6 +14,9 @@
   transition-timing-function: ease;
   padding: 0.5rem;
 }
+.product__edit {
+  visibility: hidden;
+}
 
 .product__image {
   width: 80%;
@@ -55,7 +58,6 @@
   border: none;
   background-color: navy;
   color: white;
-  box-shadow: 2px 2px 5px grey;
   font-size: large;
   transition: width 0.5s;
   transition-timing-function: ease;
