--- a/stylesheets/animations.css
+++ b/stylesheets/animations.css
@@ -12,6 +12,25 @@
   box-shadow: 0px 0px 5px 10px navy;
 }
 
+.product:hover .product__edit {
+  visibility: visible;
+  position: absolute;
+  left: 5%;
+  top: 5%;
+  box-shadow: 0px 0px 10px 5px navy;
+  background-color: navy;
+  color: white;
+  font-size: large;
+  border: none;
+  padding: 0.25rem 1rem 0.25rem 1rem;
+  width: 25%;
+  transition: width 0.5s;
+  transition-timing-function: ease;
+}
+
+.product:hover .product__edit:hover {
+  width: 40%;
+}
 .sidebar__section > ul > li:hover {
   color: navy;
 }
