Deleting product, Add and edit forms seperated, Multiple submits, edits, deletes prevented.

--- a/components/styles.css
+++ b/components/styles.css
@@ -1,4 +1,4 @@
-@import "./Add-form/add-form.css";
+@import "./Forms/form.css";
 @import "./Product/product.css";
 @import "./Shop/shop.css";
 @import "./Sidebar/sidebar.css";
