--- a/components/Forms/form.css
+++ b/components/Forms/form.css
@@ -1,17 +1,17 @@
-.form-add {
+.form {
   display: flex;
   flex-direction: column;
   align-items: center;
   border: solid navy 1px;
 }
 
-.form-add__input {
+.form__input {
   display: flex;
   margin: 1.5rem;
   justify-content: center;
   width: 80%;
 }
 
-.form-add__label {
+.form__label {
   margin: 1.5rem;
 }
