--- a/components/Product/product.css
+++ b/components/Product/product.css
@@ -14,8 +14,33 @@
   transition-timing-function: ease;
   padding: 0.5rem;
 }
+
+.product:hover {
+  box-shadow: 0px 0px 5px 10px navy;
+}
+
 .product__edit {
   visibility: hidden;
+}
+
+.product:hover .product__edit {
+  visibility: visible;
+  position: absolute;
+  left: 5%;
+  top: 5%;
+  box-shadow: 0px 0px 10px 5px navy;
+  background-color: navy;
+  color: white;
+  font-size: large;
+  border: none;
+  padding: 0.25rem 1rem 0.25rem 1rem;
+  width: 25%;
+  transition: width 0.5s;
+  transition-timing-function: ease;
+}
+
+.product:hover .product__edit:hover {
+  width: 40%;
 }
 
 .product__image {
@@ -63,6 +88,11 @@
   transition-timing-function: ease;
   box-shadow: 0px 0px 10px 5px navy;
   font-weight: bold;
+}
+
+.product__add:hover {
+  /* font-weight: bold; */
+  width: 60%;
 }
 
 .product.sale::after {
