--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -42,6 +42,11 @@ body {
   text-decoration: none;
 }
 
+.navigation__link:hover {
+  color: rgb(127, 127, 161);
+  cursor: pointer;
+}
+
 .navigation__link:visited {
   color: white;
 }
@@ -66,4 +71,65 @@ body {
   background-color: black;
   height: 10vh;
   color: white;
+}
+
+.loader-large {
+  margin: auto;
+
+  border-radius: 50%;
+  border-top: 1rem solid #3498db;
+  border-bottom: 1rem solid #3498db;
+
+  width: 4rem;
+  height: 4rem;
+  animation: spin 0.5s linear infinite;
+}
+
+.loader-small {
+  margin: auto;
+  border-radius: 50%;
+  border-top: 0.25rem solid #3498db;
+  border-bottom: 0.25rem solid #3498db;
+
+  width: 1rem;
+  height: 1rem;
+  animation: spin 0.5s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@media screen and (max-width: 1150px) {
+  .main-wrapper {
+    flex-direction: column;
+    margin: 1.5rem 1.5rem 1.5rem 1.5rem;
+  }
+
+  .main {
+    width: 100%;
+  }
+
+  .sidebar {
+    margin: 0;
+    margin-top: 1.5rem;
+  }
+}
+@media screen and (max-width: 600px) {
+  .shop__filter {
+    flex-direction: column;
+  }
+  .navigation__link-icon--cart {
+    display: none;
+  }
+}
+@media screen and (max-width: 400px) {
+  .product {
+    width: 15rem;
+  }
 }
