--- a/components/Forms/form.css
+++ b/components/Forms/form.css
@@ -2,16 +2,50 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: solid navy 1px;
+  border: solid navy 0.75rem;
+  border-radius: 1.5rem;
 }
 
 .form__input {
   display: flex;
-  margin: 1.5rem;
+  margin: 0rem 0 1rem 0;
   justify-content: center;
   width: 80%;
+  border-radius: 1.5rem;
+  font-weight: bold;
+  border: solid navy 0.25rem;
+  padding: 5px;
+}
+.form__input:hover {
+  background-color: lightgray;
 }
 
 .form__label {
-  margin: 1.5rem;
+  margin: 0.5rem 0 0.5rem 0;
+  font-size: large;
+  /* border-bottom: solid navy 1px; */
+  color: navy;
+}
+
+.form__input--submit {
+  width: 100%;
+  border: none;
+  background-color: navy;
+  color: white;
+  font-weight: bold;
+  height: 5vh;
+  border: solid white 1px;
+  border-radius: 0 0 0.25rem 0.25rem;
+}
+
+.form__input--submit:hover {
+  opacity: 0.9;
+}
+
+.submit-green {
+  background-color: green;
+}
+
+.submit-red {
+  background-color: rgb(180, 41, 41);
 }
