--- a/components/Forms/form.css
+++ b/components/Forms/form.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: solid navy 0.75rem;
+  border: solid lightblue 0.75rem;
   border-radius: 1.5rem;
 }
 
@@ -13,7 +13,7 @@
   width: 80%;
   border-radius: 1.5rem;
   font-weight: bold;
-  border: solid navy 0.25rem;
+  border: solid lightblue 0.25rem;
   padding: 5px;
 }
 .form__input:hover {
@@ -24,13 +24,13 @@
   margin: 0.5rem 0 0.5rem 0;
   font-size: large;
   /* border-bottom: solid navy 1px; */
-  color: navy;
+  color: black;
 }
 
 .form__input--submit {
   width: 100%;
   border: none;
-  background-color: navy;
+  background-color: lightblue;
   color: white;
   font-weight: bold;
   height: 5vh;
