--- a/components/Product/product.css
+++ b/components/Product/product.css
@@ -1,5 +1,5 @@
 .product {
-  border: solid navy 1px;
+  border: solid white 5px;
   margin: 0.5rem;
   width: 20rem;
   display: flex;
@@ -14,10 +14,11 @@
   transition-timing-function: ease;
   padding: 0.5rem;
   border-radius: 1.5rem;
+  background-color: lightblue;
 }
 
 .product:hover {
-  box-shadow: 0px 0px 5px 10px navy;
+  box-shadow: 0px 0px 5px 10px lightblue;
 }
 
 .product__edit {
@@ -29,10 +30,11 @@
   visibility: visible;
   left: 5%;
   top: 5%;
-  box-shadow: 0px 0px 10px 5px navy;
-  background-color: navy;
-  color: white;
+  box-shadow: 0px 0px 10px 5px white;
+  background-color: white;
+  color: black;
   font-size: large;
+  font-weight: bold;
   border: none;
   padding: 0.25rem 1rem 0.25rem 1rem;
   width: 25%;
@@ -66,7 +68,7 @@
 }
 
 .product__info-price {
-  color: navy;
+  color: white;
   padding: 0.5rem;
   font-weight: bold;
   font-size: 200%;
@@ -84,12 +86,12 @@
   margin: 1rem;
   width: 50%;
   border: none;
-  background-color: navy;
-  color: white;
+  background-color: white;
+  color: black;
   font-size: large;
   transition: width 0.5s;
   transition-timing-function: ease;
-  box-shadow: 0px 0px 10px 5px navy;
+  box-shadow: 0px 0px 10px 5px white;
   font-weight: bold;
 }
 
@@ -105,15 +107,9 @@
   padding: 0.5rem 1.5rem 0.5rem 1.5rem;
   font-weight: bold;
 
-  /* background: rgb(0, 0, 36); */
-  background: linear-gradient(
-    90deg,
-    rgba(0, 0, 36, 1) 0%,
-    rgba(0, 0, 128, 1) 12%,
-    rgba(0, 0, 36, 1) 88%
-  );
-  color: white;
-  box-shadow: 0px 0px 10px 5px navy;
+  background: lightblue;
+  color: black;
+  box-shadow: 0px 0px 10px 5px white;
   transform: rotate(-5deg);
   content: "SALE";
 }
