--- a/components/Sidebar/sidebar.css
+++ b/components/Sidebar/sidebar.css
@@ -5,7 +5,7 @@
   flex-direction: column;
 }
 .sidebar > section {
-  background-color: rgb(241, 237, 237);
+  background-color: white;
   margin-bottom: 1.5rem;
 }
 
