--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -6,7 +6,8 @@ body {
   font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
-  background-color: navy;
+  /* background-color: navy; */
+  background-image: url("/assets/background.jfif");
   overflow-x: hidden;
 }
 
