Some mock data added and displayed

--- a/Angular/e-shop/src/app/shop/shop.component.html
+++ b/Angular/e-shop/src/app/shop/shop.component.html
@@ -1,1 +1,5 @@
-<app-product-list> Thats a product list </app-product-list>
+<div class="row">
+  <div class="col-md-12">
+    <app-product-list> Thats a product list </app-product-list>
+  </div>
+</div>
