--- a/Angular/e-shop/src/app/app.component.html
+++ b/Angular/e-shop/src/app/app.component.html
@@ -1,9 +1,12 @@
 <app-header></app-header>
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-11">
       <h1>e-shop</h1>
       <app-shop> </app-shop>
+    </div>
+    <div class="col-md-1">
+      <app-sidebar></app-sidebar>
     </div>
   </div>
 </div>
