--- a/Angular/e-shop/src/app/shop/product-list/product-list.component.html
+++ b/Angular/e-shop/src/app/shop/product-list/product-list.component.html
@@ -1,4 +1,28 @@
-<h3>That's a product list</h3>
-<app-product></app-product>
-<app-product></app-product>
-<app-product></app-product>
+<div class="row">
+  <div class="col-xs-12">
+    <button class="btn btn-success">New Product</button>
+  </div>
+</div>
+<hr />
+<div class="row">
+  <div class="col-xs-12">
+    <a
+      href="#"
+      class="list-group-item clearfix col-xs-4"
+      *ngFor="let product of products"
+    >
+      <div class="pull-left">
+        <h4 class="list-group-item-heading">{{ product.name }}</h4>
+        <p class="list-group-item-text">{{ product.price }}</p>
+      </div>
+      <span class="pull-right">
+        <img
+          src="{{ product.imagePath }}"
+          alt="{{ product.name }}"
+          class="img-responsive"
+          style="max-height: 150px"
+        />
+      </span>
+    </a>
+  </div>
+</div>
