--- a/Angular/e-shop/src/app/app.component.html
+++ b/Angular/e-shop/src/app/app.component.html
@@ -1,9 +1,10 @@
-<app-header></app-header>
+<app-header (pageSelected)="renderPage($event)"></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-11">
       <h1>e-shop</h1>
-      <app-shop> </app-shop>
+      <app-shop *ngIf="currentPage === 'shop'"> </app-shop>
+      <app-cart *ngIf="currentPage === 'cart'"></app-cart>
     </div>
     <div class="col-md-1">
       <app-sidebar></app-sidebar>
