--- a/Angular/e-shop/src/app/header/header.component.html
+++ b/Angular/e-shop/src/app/header/header.component.html
@@ -16,19 +16,8 @@
       (window:resize)="collapsed = true"
     >
       <ul class="nav navbar-nav">
-        <li><a href="#">Shop</a></li>
-        <li><a href="#">Cart</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" role="button"
-            >Manage <span class="caret"></span
-          ></a>
-          <ul class="dropdown-menu">
-            <li><a href="#"> Save data</a></li>
-            <li><a href="#"> Fetch data</a></li>
-          </ul>
-        </li>
+        <li><a href="#" (click)="renderPage('shop')">Shop</a></li>
+        <li><a href="#" (click)="renderPage('cart')">Cart</a></li>
       </ul>
     </div>
   </div>
