--- a/Angular/e-shop/src/app/sidebar/sidebar.component.html
+++ b/Angular/e-shop/src/app/sidebar/sidebar.component.html
@@ -1,13 +1,11 @@
-<div class="container">
-  <div class="col-md-12" *ngFor="let section of sidebarSections">
-    <h4>{{ section.title }}</h4>
-    <hr />
-    <div class="col-md-12">
-      <ul class="list-group" *ngFor="let article of section.articles">
-        <li>
-          <a href="#" class="list-group-item">{{ article }}</a>
-        </li>
-      </ul>
-    </div>
+<div *ngFor="let section of sidebarSections">
+  <h4>{{ section.title }}</h4>
+  <hr />
+  <div>
+    <ul class="list-group" *ngFor="let article of section.articles">
+      <li>
+        <a href="#" class="list-group-item">{{ article }}</a>
+      </li>
+    </ul>
   </div>
 </div>
