--- a/Angular/e-shop/src/app/shop/shop.component.html
+++ b/Angular/e-shop/src/app/shop/shop.component.html
@@ -1,5 +1,8 @@
-<div class="row">
-  <div class="col-md-12">
-    <app-product-list> Thats a product list </app-product-list>
+<div class="shop">
+  <div class="shop__heading">
+    <h2 class="shop__heading-title">Shop</h2>
+    <span class="shop__heading-breadcrumbs">HOME/SHOP</span>
   </div>
+  <div class="shop__filter">FILTER</div>
+  <app-product-list> </app-product-list>
 </div>
