--- a/Angular/e-shop/src/app/app.component.html
+++ b/Angular/e-shop/src/app/app.component.html
@@ -1,14 +1,12 @@
-<app-header (pageSelected)="renderPage($event)"></app-header>
 <div class="container">
-  <div class="row">
-    <div class="col-lg-10">
-      <h1>e-shop</h1>
+  <app-header (pageSelected)="renderPage($event)"></app-header>
+  <div class="main-wrapper">
+    <main class="main">
+      <!-- <h1 class="main__header">E-shop</h1> -->
       <app-shop *ngIf="currentPage === 'shop'"> </app-shop>
       <app-cart *ngIf="currentPage === 'cart'"></app-cart>
-    </div>
-    <div class="col-lg-2">
-      <app-sidebar></app-sidebar>
-    </div>
+    </main>
+    <app-sidebar class="sidebar"></app-sidebar>
   </div>
+  <app-footer></app-footer>
 </div>
-<app-footer></app-footer>
