--- a/Angular/e-shop/src/app/core/footer/footer.component.html
+++ b/Angular/e-shop/src/app/core/footer/footer.component.html
@@ -1,1 +1,3 @@
-<p>footer works!</p>
+<footer class="footer">
+  <span class="footer__text">&copy; 2022 Copyright: Dautartas Valvonis</span>
+</footer>
