--- a/Angular/e-shop/src/app/core/header/header.component.html
+++ b/Angular/e-shop/src/app/core/header/header.component.html
@@ -1,24 +1,16 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button
-        type="button"
-        class="navbar-toggle"
-        (click)="collapsed = !collapsed"
-      >
-        <span class="icon-bar" *ngFor="let iconBar of [1, 2, 3]"></span>
-      </button>
-      <a href="#" class="navbar-brand">E-shop</a>
-    </div>
-    <div
-      class="collapse navbar-collapse"
-      [class.collapse]="collapsed"
-      (window:resize)="collapsed = true"
-    >
-      <ul class="nav navbar-nav">
-        <li><a href="#" (click)="renderPage('shop')">Shop</a></li>
-        <li><a href="#" (click)="renderPage('cart')">Cart</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+<header class="header">
+  <nav class="navigation">
+    <ul class="navigation__items">
+      <li class="navigation__item">
+        <a href="#" (click)="renderPage('shop')" class="navigation__link"
+          >Shop</a
+        >
+      </li>
+      <li class="navigation__item">
+        <a href="#" (click)="renderPage('cart')" class="navigation__link"
+          >Cart</a
+        >
+      </li>
+    </ul>
+  </nav>
+</header>
