--- a/Angular/e-shop/src/app/shop/product-list/product/product.component.html
+++ b/Angular/e-shop/src/app/shop/product-list/product/product.component.html
@@ -1,14 +1,9 @@
-<a href="#" class="list-group-item clearfix col-xs-4" (click)="onClick()">
-  <div class="pull-left">
-    <h4 class="list-group-item-heading">{{ product.name }}</h4>
-    <p class="list-group-item-text">{{ product.price }}</p>
+<div (click)="onClick()" class="product">
+  <button type="button" class="product__edit">EDIT</button>
+  <img src="{{ product.imagePath }}" alt="product" class="product__image" />
+  <div class="product__info">
+    <h4 class="product__info-name">{{ product.name }}</h4>
+    <p class="product__info-price">{{ product.price }} €</p>
   </div>
-  <span class="pull-right">
-    <img
-      src="{{ product.imagePath }}"
-      alt="{{ product.name }}"
-      class="img-responsive"
-      style="max-height: 150px"
-    />
-  </span>
-</a>
+  <button type="button" class="product__add">Add to cart</button>
+</div>
