--- a/Angular/e-shop/src/styles.scss
+++ b/Angular/e-shop/src/styles.scss
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+html {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
+  background-image: url("/assets/background.jfif");
+  overflow-x: hidden;
+}
