Product service added

--- a/Angular/e-shop/src/app/cart/cart.component.html
+++ b/Angular/e-shop/src/app/cart/cart.component.html
@@ -1,1 +1,7 @@
-<p>cart works!</p>
+<div class="cart">
+  <app-product
+    class="product-wrapper"
+    *ngFor="let productItem of products"
+    [product]="productItem"
+  ></app-product>
+</div>
