--- a/Angular/e-shop/src/app/core/header/header.component.scss
+++ b/Angular/e-shop/src/app/core/header/header.component.scss
@@ -15,6 +15,7 @@
       justify-content: space-around;
       align-items: center;
       font-weight: bold;
+      padding: 0;
     }
     &__item {
       display: flex;
