Navigation routing added.

--- a/Angular/e-shop/src/app/app.component.html
+++ b/Angular/e-shop/src/app/app.component.html
@@ -3,8 +3,9 @@
   <div class="main-wrapper">
     <main class="main">
       <!-- <h1 class="main__header">E-shop</h1> -->
-      <app-shop *ngIf="currentPage === 'shop'"> </app-shop>
-      <app-cart *ngIf="currentPage === 'cart'"></app-cart>
+      <router-outlet></router-outlet>
+      <!-- <app-shop *ngIf="currentPage === 'shop'"> </app-shop>
+      <app-cart *ngIf="currentPage === 'cart'"></app-cart> -->
     </main>
     <app-sidebar class="sidebar"></app-sidebar>
   </div>
