Child routes for shop.

--- a/Angular/e-shop/src/app/shop/shop.component.html
+++ b/Angular/e-shop/src/app/shop/shop.component.html
@@ -4,5 +4,6 @@
     <span class="shop__heading-breadcrumbs">HOME/SHOP</span>
   </div>
   <div class="shop__filter">FILTER</div>
-  <app-product-list> </app-product-list>
+  <router-outlet></router-outlet>
+  <!-- <app-product-list> </app-product-list> -->
 </div>
