Not-found and children routing added.

--- a/Angular/e-shop/src/app/shop/product-list/product-list.component.html
+++ b/Angular/e-shop/src/app/shop/product-list/product-list.component.html
@@ -40,6 +40,8 @@
     </form> -->
 </div>
 <hr />
+<div class="shop__filter">FILTER</div>
+
 <div class="shop__grid">
   <app-product
     class="product-wrapper"
