Filter and product-add button added.

--- a/Angular/e-shop/src/app/shop/filter/filter.component.html
+++ b/Angular/e-shop/src/app/shop/filter/filter.component.html
@@ -1,1 +1,17 @@
-<p>filter works!</p>
+<div class="filter">
+  <div class="filter__wrapper">
+    <span class="filter__text">
+      Showing
+      <span class="filter__range"></span>
+      of
+      <span class="filter__count"></span>
+      results
+    </span>
+
+    <select name="sort" class="filter__sort">
+      <option value="default" selected="selected">Default sorting</option>
+      <option value="other">Other sorting</option>
+    </select>
+  </div>
+  <div class="filter__pagination">PAGINATION</div>
+</div>
