--- a/Angular/e-shop/src/app/shop/product-list/product-list.component.html
+++ b/Angular/e-shop/src/app/shop/product-list/product-list.component.html
@@ -6,5 +6,5 @@
     *ngFor="let productItem of products"
     [product]="productItem"
   ></app-product>
-  <button type="button" class="shop__add"></button>
+  <button type="button" class="shop__add" [routerLink]="['./add']"></button>
 </div>
