--- a/Angular/e-shop/src/app/app.component.html
+++ b/Angular/e-shop/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <app-header (pageSelected)="renderPage($event)"></app-header>
+  <app-header></app-header>
   <div class="main-wrapper">
     <main class="main">
       <!-- <h1 class="main__header">E-shop</h1> -->
