Minor form resposiveness fixes.

--- a/Angular/e-shop/src/app/shop/product-form/product-form.component.html
+++ b/Angular/e-shop/src/app/shop/product-form/product-form.component.html
@@ -82,7 +82,7 @@
       <button
         type="button"
         class="form__input--submit red-background"
-        (click)="onDeleteClick()"
+        (click)="onDelete()"
       >
         DELETE
       </button>
