--- a/Angular/e-shop/src/app/shop/product-form/product-form.component.scss
+++ b/Angular/e-shop/src/app/shop/product-form/product-form.component.scss
@@ -9,7 +9,7 @@
 
   &__wrapper {
     width: 100%;
-    height: 30vh;
+    height: 35vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -70,6 +70,7 @@
   &__helper {
     color: red;
     font-weight: bold;
+    font-size: small;
   }
   .red-background {
     background-color: red;
@@ -86,7 +87,7 @@
 input.ng-invalid.ng-touched {
   border: 1px solid red;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
   .form {
     flex-direction: column;
     &__wrapper {
