--- a/Angular/e-shop/src/app/shop/product-list/product/product.component.html
+++ b/Angular/e-shop/src/app/shop/product-list/product/product.component.html
@@ -1,4 +1,4 @@
-<div class="product">
+<div class="product" [ngClass]="{ sale: product.onSale === true }">
   <button type="button" class="product__edit" (click)="onEditClick()">
     EDIT
   </button>
