--- a/Angular/e-shop/src/app/shop/product-list/product-list.component.scss
+++ b/Angular/e-shop/src/app/shop/product-list/product-list.component.scss
@@ -20,6 +20,7 @@
   border-radius: 40%;
   border: none;
   box-shadow: 0px 0px 5px 5px white;
+  cursor: pointer;
   &:hover {
     background-size: cover;
   }
