--- a/Angular/e-shop/src/app/app.component.html
+++ b/Angular/e-shop/src/app/app.component.html
@@ -10,4 +10,9 @@
     <app-sidebar class="sidebar"></app-sidebar>
   </div>
   <app-footer></app-footer>
+  <!-- <app-alert
+    *ngIf="alertMessage"
+    [message]="alertMessage"
+    (close)="alertClose()"
+  ></app-alert> -->
 </div>
