Cart item modified; Add to cart partly done.

--- a/Angular/e-shop/src/app/cart/cart.component.html
+++ b/Angular/e-shop/src/app/cart/cart.component.html
@@ -3,5 +3,7 @@
     class="product-wrapper"
     *ngFor="let productItem of products"
     [product]="productItem"
+    [isInCart]="true"
   ></app-product>
 </div>
+<!-- *ngFor="let productItem; products of (products | async).products "s -->
