--- a/Angular/e-shop/src/app/shared/components/product/product.component.html
+++ b/Angular/e-shop/src/app/shared/components/product/product.component.html
@@ -1,5 +1,10 @@
 <div class="product" [ngClass]="{ sale: product.onSale === true }">
-  <button type="button" class="product__edit" (click)="onEditClick()">
+  <button
+    *ngIf="!isInCart"
+    type="button"
+    class="product__edit"
+    (click)="onEditClick()"
+  >
     EDIT
   </button>
   <img src="{{ product.image }}" alt="product" class="product__image" />
@@ -7,7 +12,20 @@
     <h4 class="product__info-name">{{ product.name }}</h4>
     <p class="product__info-price">{{ product.price }} €</p>
   </div>
-  <button type="button" class="product__add" (click)="onAddToCart()">
+  <button
+    *ngIf="!isInCart"
+    type="button"
+    class="product__add"
+    (click)="onAddToCart()"
+  >
     Add to cart
+  </button>
+  <button
+    *ngIf="isInCart"
+    type="button"
+    class="product__add"
+    (click)="onRemoveFromCart()"
+  >
+    Remove
   </button>
 </div>
