--- a/Angular/e-shop/src/app/core/header/header.component.html
+++ b/Angular/e-shop/src/app/core/header/header.component.html
@@ -7,7 +7,7 @@
           class="navigation__link"
           routerLinkActive="active"
           [routerLinkActiveOptions]="{ exact: true }"
-          >Shop</a
+          >{{ title }}</a
         >
       </li>
       <li class="navigation__item">
